@@ -13,6 +13,9 @@ Currently deprecated and liable to be removed:
   formulae models and to use -2*logLik in place of `deviance' for 
   general.family models.
 
+* bam and gam have `drop.intercept' argument to force the parametric terms not 
+  to include a constant in their span, even when there are factor variables. 
+
 * Fix in Vb.corr (2nd order edf correction) for fixed smoothing parameter case.
 
 * added 'all.vars1' to enable terms like s(x$y) in model formulae. 
